--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -67,16 +67,18 @@ body {
     }
 }
 
-// ::-webkit-scrollbar {
-//     width: 5px;
-// }
-// ::-webkit-scrollbar-track {
-//     background: transparent;
-// }
-// ::-webkit-scrollbar-thumb {
-//     background: #666;
-//     -webkit-border-radius: 20px
-// }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+  height: 7px;
+  background-color: rgba(0, 0, 0, .1);
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
 a,
 button,
 div,
